Correção de problema nas imagens

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style_index.css"> <!-- CSS PADRÃO-->
     <link rel="stylesheet" href="assets/css/responsividade.css"> <!-- CSS RESPONSIVIDADE-->
-    <link rel="stylesheet" href="/assets/css/animate.css"><!-- CSS ANIMAÇÕES -->
+    <link rel="stylesheet" href="assets/css/animate.css"><!-- CSS ANIMAÇÕES -->
     <!-- ICONES -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <!-- FONTES -->
@@ -38,7 +38,7 @@
             
             <!-- BOTÃO PARA ALTERNAR ENTRE MODO ESCURO E CLARO -->
             <a id="btn-darkmode">
-                <img src="/assets/img/mode-dark.png" alt="Ícone de Modo Escuro">
+                <img src="assets/img/mode-dark.png" alt="Ícone de Modo Escuro">
                 <span id="mode-text">Modo Escuro</span>
             </a>
         </div>
@@ -55,7 +55,7 @@
             <!-- ALUNOS -->
             <div class="section-body sec_aluno">
                 <div class="img_integrante">
-                    <img src="/assets/img/FOTOS/MAYCON.jpg" alt="">
+                    <img src="assets/img/FOTOS/MAYCON.jpg" alt="">
                 </div>
                 <div class="section-desc">
                     <br>
@@ -73,7 +73,7 @@
             <!-- ALUNOS -->
             <div class="section-body sec_aluno">
                 <div class="img_integrante">
-                    <img src="/assets/img/FOTOS/IGOR2.jpeg" alt="">
+                    <img src="assets/img/FOTOS/IGOR2.jpeg" alt="">
                 </div>
                 <div class="section-desc">
                     <br>
@@ -91,7 +91,7 @@
             <!-- ALUNOS -->
             <div class="section-body sec_aluno">
                 <div class="img_integrante">
-                    <img src="/assets/img/FOTOS/paulo.jpeg" alt="">
+                    <img src="assets/img/FOTOS/paulo.jpeg" alt="">
                 </div>
                 <div class="section-desc integrantes_info">
                     <br>
@@ -183,7 +183,7 @@
             <!-- TECNOLOGIAS USADAS NO SITE -->
             <div class="section-title" style="color:#000;"><h3>Tecnologias</h3></div>
                 <div class="project-tecn">
-                    <img src="/assets/img/ICONES PROGRAMAÇÃO/HTML-CSS-JS.png" alt="">
+                    <img src="assets/img/ICONES PROGRAMAÇÃO/HTML-CSS-JS.png" alt="">
                 </div>
             </div>
      </section>
@@ -223,6 +223,6 @@
             </section> <!-- FIM CONTATOS -->
         </div>
      </footer>
-     <script src="/assets/js/Mode-dark.js"></script>
+     <script src="assets/js/Mode-dark.js"></script>
 </body>
 </html>
